# thin-edge.io

./: Cargo.toml
.github/workflows/: hosted-post-merge_version_update.yml  pull-request-checks.yml  update-tedge-ref-docs.yml
crates/common/mqtt_channel/: Cargo.toml
crates/common/tedge_utils/src/: file.rs
crates/core/tedge/: Cargo.toml
crates/core/tedge/src/: main.rs
crates/core/tedge_agent/src/: agent.rs
crates/core/tedge_api/: Cargo.toml  README.md
crates/core/tedge_api/examples/: heartbeat.rs  print_config.rs  universal_log.rs
crates/core/tedge_api/src/: address.rs  config.rs  error.rs  lib.rs  message.rs  plugin.rs  util.rs
crates/core/tedge_api/tedge_config_derive/src/: lib.rs
crates/core/tedge_core/: Cargo.toml  README.md
crates/core/tedge_core/benches/: simple_throughput.rs  simple_throughput.toml
crates/core/tedge_core/src/: communication.rs  configuration.rs  core_task.rs  errors.rs  lib.rs  message_handler.rs  plugin_task.rs  reactor.rs  task.rs
crates/core/tedge_core/tests/: check_concurrent_messages.rs  check_concurrent_messages.toml  plugin_does_not_shutdown.rs  plugin_does_not_shutdown.toml  plugin_does_not_support_message.rs  plugin_does_not_support_message.toml  plugin_panic_lifecycle.rs  plugin_panic_lifecycle.toml  plugin_panics_in_msg_handler.rs  plugin_panics_in_msg_handler.toml  plugin_panics_in_setup.rs  plugin_send_to_self_name.rs  plugin_send_to_self_name.toml  verify_configuration_fails.rs  verify_configuration_fails.toml
crates/core/tedge_lib/: Cargo.toml
crates/core/tedge_lib/src/: address.rs  config.rs  lib.rs  measurement.rs  notification.rs  pubsub.rs  reply.rs  sm.rs
crates/core/tedge_lib/src/config/: address.rs  mod.rs  one_or_many.rs  port.rs  socket_addr.rs
crates/core/tedge_lib/src/iter/: mod.rs  result.rs  send_all.rs  send_result.rs
crates/core/tedge_lib/src/mainloop/: detach.rs  mod.rs  stopper.rs  ticking.rs
crates/core/tedge_lib/tests/: test_pubsub.rs  test_pubsub.toml  test_send_group.rs  test_send_group.toml
crates/core/tedge_mapper/src/az/: mapper.rs
crates/core/tedge_mapper/src/c8y/: mapper.rs
crates/tests/mqtt_tests/: Cargo.toml
plugins/c8y_configuration_plugin/src/: main.rs
plugins/c8y_log_plugin/src/: main.rs
plugins/plugin_avg/: Cargo.toml  README.md
plugins/plugin_avg/src/: lib.rs
plugins/plugin_c8y/: Cargo.toml  README.md
plugins/plugin_c8y/src/: builder.rs  config.rs  lib.rs  plugin.rs
plugins/plugin_collectd/: Cargo.toml
plugins/plugin_collectd/src/: builder.rs  config.rs  error.rs  lib.rs  measurement.rs  payload.rs  plugin.rs  topic.rs
plugins/plugin_httpstop/: Cargo.toml
plugins/plugin_httpstop/src/: lib.rs
plugins/plugin_inotify/: Cargo.toml  README.md
plugins/plugin_inotify/src/: config.rs  lib.rs
plugins/plugin_log/: Cargo.toml  README.md
plugins/plugin_log/src/: lib.rs
plugins/plugin_measurement_filter/: Cargo.toml  README.md
plugins/plugin_measurement_filter/src/: builder.rs  config.rs  error.rs  extractor.rs  filter.rs  lib.rs  plugin.rs
plugins/plugin_mqtt/: Cargo.toml
plugins/plugin_mqtt/src/: builder.rs  config.rs  error.rs  lib.rs  message.rs  plugin.rs
plugins/plugin_mqtt_measurement_bridge/: Cargo.toml  README.md
plugins/plugin_mqtt_measurement_bridge/src/: lib.rs
plugins/plugin_mqtt_sm/: Cargo.toml
plugins/plugin_mqtt_sm/src/: builder.rs  config.rs  error.rs  lib.rs  message.rs  plugin.rs
plugins/plugin_notification/: Cargo.toml  README.md
plugins/plugin_notification/src/: builder.rs  config.rs  lib.rs  plugin.rs
plugins/plugin_sm_apt/: Cargo.toml
plugins/plugin_sm_apt/src/: builder.rs  config.rs  error.rs  lib.rs  plugin.rs
plugins/plugin_sysstat/: Cargo.toml  README.md
plugins/plugin_sysstat/src/: builder.rs  config.rs  error.rs  lib.rs  plugin.rs
plugins/plugin_sysstat/src/main/: cpu.rs  disk_usage.rs  load.rs  memory.rs  mod.rs  network.rs  process.rs
plugins/plugin_thin_edge_json/: Cargo.toml  README.md
plugins/plugin_thin_edge_json/src/: builder.rs  config.rs  error.rs  lib.rs  message.rs  plugin.rs
plugins/plugin_thin_edge_json_to_measurement_mapper/: Cargo.toml  README.md
plugins/plugin_thin_edge_json_to_measurement_mapper/src/: builder.rs  config.rs  error.rs  lib.rs  plugin.rs
tedge/: Cargo.toml  README.md  example-config-logging.toml  example-config-showcase.toml  example-config.toml  example-mqtt-config.toml  invalid-config.toml  simple-config.toml
tedge/src/: cli.rs  config.rs  lib.rs  logging.rs  main.rs  registry.rs
