[workspace]

members = [
    "crates/common/*",
    "crates/core/*",
    "crates/tests/*",
    "plugins/plugin_avg",
    "plugins/plugin_httpstop",
    "plugins/plugin_inotify",
    "plugins/plugin_log",
    "plugins/plugin_mqtt",
    "plugins/plugin_sysstat",
    "plugins/tedge_apt_plugin",
    "plugins/tedge_dummy_plugin",
    "plugins/tedge_apama_plugin",
    "tedge"
]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = 'abort'
