[workspace]

members = [
    "crates/common/*",
    "crates/core/*",
    "crates/core/tedge_api/tedge_config_derive",
    "crates/tests/*",
    "plugins/plugin_avg",
    "plugins/plugin_collectd",
    "plugins/plugin_httpstop",
    "plugins/plugin_inotify",
    "plugins/plugin_log",
    "plugins/plugin_measurement_filter",
    "plugins/plugin_mqtt",
    "plugins/plugin_mqtt_measurement_bridge",
    "plugins/plugin_notification",
    "plugins/plugin_sm_apt",
    "plugins/plugin_sysstat",
    "plugins/plugin_thin_edge_json",
    "plugins/plugin_thin_edge_json_to_measurement_mapper",
    "plugins/tedge_apt_plugin",
    "plugins/tedge_dummy_plugin",
    "plugins/tedge_apama_plugin",
    "tedge"
]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = 'abort'
