[package]
name = "tedge-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive", "cargo", "suggestions"] }
toml = "0.5.8"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
miette = { version = "4.4", features = ["fancy"] }
cfg-if = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
console-subscriber = { version = "0.1", optional = true }

tedge_api = { path = "../crates/core/tedge_api" }
tedge_core = { path = "../crates/core/tedge_core" }
tedge_lib = { path = "../crates/core/tedge_lib" }

env_logger = { version = "0.9", optional = true }

plugin_avg = { path = "../plugins/plugin_avg", optional = true }
plugin_log = { path = "../plugins/plugin_log", optional = true }
plugin_sysstat = { path = "../plugins/plugin_sysstat", optional = true }
plugin_inotify = { path = "../plugins/plugin_inotify", optional = true }
plugin_httpstop = { path = "../plugins/plugin_httpstop", optional = true }
plugin_measurement_filter = { path = "../plugins/plugin_measurement_filter", optional = true }


[features]
default = [
    "core_logging",
    "builtin_plugin_avg",
    "builtin_plugin_log",
    "builtin_plugin_sysstat",
    "builtin_plugin_inotify",
    "builtin_plugin_httpstop",
    "builtin_plugin_measurement_filter",
]

core_debugging = ["console-subscriber"]
core_logging = ["tracing-subscriber"]
builtin_plugin_avg = ["plugin_avg"]
builtin_plugin_log = ["plugin_log"]
builtin_plugin_sysstat = ["plugin_sysstat"]
builtin_plugin_inotify = ["plugin_inotify"]
builtin_plugin_httpstop = ["plugin_httpstop"]
builtin_plugin_measurement_filter = ["plugin_measurement_filter"]

