[package]
name = "tedge-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive", "cargo", "suggestions"] }
toml = "0.5.8"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
miette = { version = "4.4", features = ["fancy"] }
cfg-if = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-chrome = "0.6"
tracing-tracy = "0.9"
cfg_table = "1.0.0"
nu-ansi-term = "0.45.1"
pretty = { version = "0.11.3", features = ["termcolor"] }
termcolor = "1.1.3"
termimad = "0.20.1"
term_size = "0.3.2"

tedge_api = { path = "../crates/core/tedge_api" }
tedge_core = { path = "../crates/core/tedge_core" }
tedge_lib = { path = "../crates/core/tedge_lib" }

env_logger = { version = "0.9", optional = true }

plugin_avg = { path = "../plugins/plugin_avg", optional = true }
plugin_log = { path = "../plugins/plugin_log", optional = true }
plugin_sysstat = { path = "../plugins/plugin_sysstat", optional = true }
plugin_inotify = { path = "../plugins/plugin_inotify", optional = true }
plugin_httpstop = { path = "../plugins/plugin_httpstop", optional = true }
plugin_measurement_filter = { path = "../plugins/plugin_measurement_filter", optional = true }
plugin_mqtt = { path = "../plugins/plugin_mqtt", optional = true }
plugin_mqtt_measurement_bridge = { path = "../plugins/plugin_mqtt_measurement_bridge", optional = true }
plugin_notification = { path = "../plugins/plugin_notification", optional = true }
plugin_sm_apt = { path = "../plugins/plugin_sm_apt", optional = true }


[features]
default = [
    "builtin_plugin_avg",
    "builtin_plugin_log",
    "builtin_plugin_sysstat",
    "builtin_plugin_inotify",
    "builtin_plugin_httpstop",
    "builtin_plugin_measurement_filter",
    "builtin_plugin_notification",
]

builtin_plugin_avg = ["plugin_avg"]
builtin_plugin_log = ["plugin_log"]
builtin_plugin_sysstat = ["plugin_sysstat"]
builtin_plugin_inotify = ["plugin_inotify"]
builtin_plugin_httpstop = ["plugin_httpstop"]
builtin_plugin_measurement_filter = ["plugin_measurement_filter"]
builtin_plugin_notification  = ["plugin_notification"]

mqtt = ["plugin_mqtt", "plugin_mqtt_measurement_bridge"]
sm = ["plugin_sm_apt"]

