[package]
name = "plugin_c8y"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
miette = "4.4"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
toml = "0.5"

tedge_api = { path = "../../crates/core/tedge_api" }
tedge_lib = { path = "../../crates/core/tedge_lib" }
plugin_mqtt = { path = "../../plugins/plugin_mqtt" }

