[package]
name = "plugin_inotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3"
miette = "4.4"
inotify = "0.10"
log = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-util = "0.7.0"
tracing = "0.1"
thiserror = "1"
toml = "0.5"

tedge_api = { path = "../../crates/core/tedge_api" }
tedge_lib = { path = "../../crates/core/tedge_lib" }

