[package]
name = "plugin_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
log = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
tracing = "0.1"

tedge_api = { path = "../../crates/core/tedge_api" }
