[package]
name = "plugin_mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
miette = "4.4"
thiserror = "1"
log = { version = "0.4", features = ["serde"] }
futures = "0.3"
paho-mqtt = "0.10"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = [] }
tokio-util = "0.7.0"
tracing = "0.1"
toml = "0.5"

tedge_api = { path = "../../crates/core/tedge_api" }
tedge_lib = { path = "../../crates/core/tedge_lib" }

