[package]
name = "plugin_notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
log = { version = "0.4", features = ["serde"] }
nom = "7"
miette = "4.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_with = "1"
tokio-util = "0.7.0"
tracing = "0.1"

tedge_api = { path = "../../crates/core/tedge_api" }
tedge_lib = { path = "../../crates/core/tedge_lib" }

[dev-dependencies]
float-cmp = "0.9"
toml = "0.5"

