[package]
name = "plugin_sm_apt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
miette = "4.4"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1"
toml = "0.5"
tracing = "0.1"

tedge_api = { path = "../../crates/core/tedge_api" }
tedge_lib = { path = "../../crates/core/tedge_lib" }

