[package]
name = "plugin_sysstat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
serde = { version = "1.0.136", features = ["derive"] }
miette = "4.4"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-util = "0.7.0"
sysinfo = "0.23"
futures = "0.3"
tracing = "0.1"

tedge_api = { path = "../../crates/core/tedge_api" }
tedge_lib = { path = "../../crates/core/tedge_lib" }

[dev-dependencies]
toml = "0.5"

