[package]
name = "plugin_thin_edge_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
miette = "4.4"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1"
toml = "0.5"

tedge_api = { path = "../../crates/core/tedge_api" }
plugin_mqtt = { path = "../../plugins/plugin_mqtt" }

thin_edge_json = { path = "../../crates/core/thin_edge_json" }

