[package]
name = "tedge_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
miette = "4.7"
futures = "0.3"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["sync", "macros"] }
tokio-util = "0.7"
toml = "0.5.8"
tracing = "0.1"

tedge_api = { path = "../tedge_api" }
itertools = "0.10.3"

[features]
tracing-off = ["tracing/release_max_level_off"]

[dev-dependencies]
async-trait = "0.1"
criterion = { version = "0.3.5", features = ["async_tokio", "html_reports"] }
env_logger = "0.9"
futures = "0.3"
static_assertions = "1.1.0"
test-log = { version = "0.2.10", default-features = false, features = ["trace"] }
tokio = { version = "1.16.1", features = ["full"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
bevy_reflect = "0.7.0"

[[bench]]
name = "simple_throughput"
harness = false
