[package]
name = "tedge_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
futures = "0.3"
log = "0.4"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["macros", "rt", "sync", "time"] }
toml = "0.5.8"
uuid = { version = "0.8", features = ["serde", "v4"] }

tedge_api = { path = "../tedge_api" }
