[package]
name = "tedge_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
futures = "0.3"
log = "0.4"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["macros", "rt", "sync", "time"] }
toml = "0.5.8"
tracing = "0.1"
humantime-serde = "1"
indoc = "1.0.6"
itertools = "0.10"
miette = "4.4"
bevy_reflect = "0.7.0"

tedge_api = { path = "../tedge_api" }

[dev-dependencies]
miette = { version = "4.4", features = ["fancy"] }
tedge_core = { path = "../tedge_core" }
tokio = { version = "1.16.1", features = ["full"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
